--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <br>
     <div id="power-gauge"></div>
     <script data-require="d3@*" data-semver="3.2.2" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.min.js"></script>
-    <script src="app.js"></script>
+    <script src="dist/main.js"></script>
 </body>
 </html>
