fixing a bit in the readme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </main>
     <br>
     <div id="power-gauge"></div>
+    <div id="direction-gauge"></div>
     <script src="node_modules/d3/dist/d3.min.js"></script>
     <script src="dist/main.js"></script>
 </body>
